--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	],
 	"repository": {
 		"type": "git"
-		, "url": "https://github.com/yessky/ks-template.git"
+		, "url": "https://github.com/yessky/JST.git"
 	},
 	"engines": {
 		"node": ">=0.10.0"
